# cjoj

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  main.c
include/: CMakeLists.txt
include/joj/: CMakeLists.txt  defines.h  error_code.h  jmacros.h
include/joj/platform/: CMakeLists.txt  input.h  keys.h  platform.h  timer.h
include/joj/renderer/: CMakeLists.txt  renderer.h
include/joj/renderer/d3d11/: CMakeLists.txt  renderer_d3d11.h
include/joj/renderer/gl/: CMakeLists.txt  joj_gl.h
src/: CMakeLists.txt
src/platform/: CMakeLists.txt  platform.c
src/platform/win32/: CMakeLists.txt  input_win32.c  platform_win32.c  timer_win32.c
src/renderer/: CMakeLists.txt
src/renderer/d3d11/: CMakeLists.txt  renderer_d3d11.c
src/renderer/gl/: CMakeLists.txt  joj_gl_win32.c
